fix: fix wrong width for poster-side top & add padding to main container

--- a/style.scss
+++ b/style.scss
@@ -52,13 +52,14 @@ $button-font: Roboto, sans-serif;
   max-width: 1440px;
   margin: 0 auto;
   padding-top: 5px;
+  padding-left: 10px;
 }
 
 .poster-sides {
   position: absolute;
+  max-width: calc(100% + (100vw - 100%) / 2);
   z-index: -2;
   height: 100%;
-  max-width: calc(100vw - (100vw - 100%));
 
   &__top {
     display: flex;
